fix image paths

--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
         picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character,
         while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
         <picture>
-            <source media="(min-width: 1024px)" srcset="/images/majorca-waves-L.png">
-            <source media="(min-width: 780px)" srcset="/images/majorca-waves-M.png">
-            <source media="(min-width: 320px)" srcset="/images/majorca-waves-S.png">
-            <img src="/images/majorca-waves-M.png" alt="Majorca Beach" style="width:auto;">
+            <source media="(min-width: 1024px)" srcset="images/majorca-waves-L.png">
+            <source media="(min-width: 780px)" srcset="images/majorca-waves-M.png">
+            <source media="(min-width: 320px)" srcset="images/majorca-waves-S.png">
+            <img src="images/majorca-waves-M.png" alt="Majorca Beach" style="width:auto;">
         </picture>
         <picture>
-            <source media="(min-width: 1024px)" srcset="/images/majorca-beach-L.png">
-            <source media="(min-width: 780px)" srcset="/images/majorca-beach-M.png">
-            <source media="(min-width: 320px)" srcset="/images/majorca-beach-S.png">
-            <img src="/images/majorca-beach-M.png" alt="Majorca Cove" style="width:auto;">
+            <source media="(min-width: 1024px)" srcset="images/majorca-beach-L.png">
+            <source media="(min-width: 780px)" srcset="images/majorca-beach-M.png">
+            <source media="(min-width: 320px)" srcset="images/majorca-beach-S.png">
+            <img src="images/majorca-beach-M.png" alt="Majorca Cove" style="width:auto;">
         </picture>
         <picture>
-            <source media="(min-width: 1024px)" srcset="/images/majorca-cove-L.png">
-            <source media="(min-width: 780px)" srcset="/images/majorca-cove-M.png">
-            <source media="(min-width: 320px)" srcset="/images/majorca-cove-S.png">
-            <img src="/images/majorca-cove-M.png" alt="Majorca Cove" style="width:auto;">
+            <source media="(min-width: 1024px)" srcset="images/majorca-cove-L.png">
+            <source media="(min-width: 780px)" srcset="images/majorca-cove-M.png">
+            <source media="(min-width: 320px)" srcset="images/majorca-cove-S.png">
+            <img src="images/majorca-cove-M.png" alt="Majorca Cove" style="width:auto;">
         </picture>
         <section id="plan-your-trip">
             <h2>Plan Your Trip</h2>
@@ -143,10 +143,10 @@
                 <article>               
                     <h3>Miranda Blake</h3>
                     <picture >
-                        <source srcset="/images/miranda-blake-L.png" media="(min-width: 1024px)">
-                        <source srcset="/images/miranda-blake-M.png" media="(min-width: 780px)">
-                        <source srcset="/images/miranda-blake-S.png" media="(min-width: 320px)">
-                        <img src="/images/miranda-blake-S.png" alt="Miranda Blake">
+                        <source srcset="images/miranda-blake-L.png" media="(min-width: 1024px)">
+                        <source srcset="images/miranda-blake-M.png" media="(min-width: 780px)">
+                        <source srcset="images/miranda-blake-S.png" media="(min-width: 320px)">
+                        <img src="images/miranda-blake-S.png" alt="Miranda Blake">
                     </picture>
                     <h4>Traveling From: London, England</h4> 
                     <p style="text-wrap:wrap; width: 200px; margin-right: 100px;">“I traveled here for business, but my stay was extended. Now it is my home.” </p>
@@ -154,10 +154,10 @@
                 <article>
                 <h3>Max Winter</h3>
                 <picture>
-                    <source srcset="/images/max-winter-L.png" media="(min-width: 1024px)">
-                    <source srcset="/images/max-winter-M.png" media="(min-width: 780px)">
-                    <source srcset="/images/max-winter-S.png" media="(min-width: 320px)">
-                    <img src="/images/max-winter-S.png" alt="Max Winter">
+                    <source srcset="images/max-winter-L.png" media="(min-width: 1024px)">
+                    <source srcset="images/max-winter-M.png" media="(min-width: 780px)">
+                    <source srcset="images/max-winter-S.png" media="(min-width: 320px)">
+                    <img src="images/max-winter-S.png" alt="Max Winter">
                 </picture>
                 <h4>Traveling From: Berlin, Germany</h4> 
                 <p style="text-wrap:wrap; width: 200px; margin-right: 100px;">“Great escape from my reality. Beautiful sunsets, wonderful people, great beer. ” </p>
@@ -165,10 +165,10 @@
                 <article>
                 <h3>Inés Villegoes</h3>
                 <picture>
-                    <source srcset="/images/ines-villegoes-L.png" media="(min-width: 1024px)">
-                    <source srcset="/images/ines-villegoes-M.png" media="(min-width: 780px)">
-                    <source srcset="/images/ines-villegoes-S.png" media="(min-width: 320px)">
-                    <img src="/images/ines-villegoes-S.png" alt="Inés Villegoes">
+                    <source srcset="images/ines-villegoes-L.png" media="(min-width: 1024px)">
+                    <source srcset="images/ines-villegoes-M.png" media="(min-width: 780px)">
+                    <source srcset="images/ines-villegoes-S.png" media="(min-width: 320px)">
+                    <img src="images/ines-villegoes-S.png" alt="Inés Villegoes">
                 </picture>
                 <h4>Traveling From: Barcelona, Spain</h4> 
                 <p style="text-wrap:wrap; width: 200px; margin-right: 100px;">“A very safe environment for all travelers.” </p>
@@ -176,10 +176,10 @@
                 <article>
                 <h3>Carmen Lorenzo</h3>
                 <picture>
-                    <source srcset="/images/carmen-lorenzo-L.png" media="(min-width: 1024px)">
-                    <source srcset="/images/carmen-lorenzo-M.png" media="(min-width: 780px)">
-                    <source srcset="/images/carmen-lorenzo-S.png" media="(min-width: 320px)">
-                    <img src="/images/carmen-lorenzo-S.png" alt="Carmen Lorenzo">
+                    <source srcset="images/carmen-lorenzo-L.png" media="(min-width: 1024px)">
+                    <source srcset="images/carmen-lorenzo-M.png" media="(min-width: 780px)">
+                    <source srcset="images/carmen-lorenzo-S.png" media="(min-width: 320px)">
+                    <img src="images/carmen-lorenzo-S.png" alt="Carmen Lorenzo">
                 </picture>
                 <h4>Traveling From: Madrid, Spain</h4> 
                 <p style="text-wrap:wrap; width: 200px; margin-right: 100px;">“Live, laugh, love-- everything you need in Majorca.” </p>
