--- a/index.html
+++ b/index.html
@@ -4,30 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wunderlust Travel</title>
-    <style>
-
-        .skip-link {
-            position: absolute;
-            top: -40px;
-            left: 0;
-        }
-        .skip-link:focus {
-            top: 0;
-            left: 0;
-            background-color: #fff;
-            padding: 8px;
-            z-index: 1000;
-        }
-    </style>
 </head>
 <body>
     <header>
         <a class="skip-link" href="#main-content">Skip to main content</a>
 
     <picture>
-        <source media="(min-width: 650px)" srcset="/images/logo-L.png">
-        <source media="(min-width: 465px)" srcset="/images/logo-M.png">
-        <img src="/images/logo-S.png" alt="Wunderlust Travel Logo" style="width:auto;">
+        <source media="(min-width: 650px)" srcset="images/logo-L.png">
+        <source media="(min-width: 465px)" srcset="images/logo-M.png">
+        <img src="images/logo-L.png" alt="Wunderlust Travel Logo" style="width:auto;">
     </picture>
     <h1>Wunderlust Travel</h1>
     <p>Let Wunderlust Travel help you plan the trip of your dreams!</p> 
