--- a/wunderlustMYSOLUTION.html
+++ b/wunderlustMYSOLUTION.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <a href="#"><img src="images/logo.png" alt="The Wunderlust logo shows blue waves and the outline of two palm trees against an orange sun"></a>
+            <a href="#"><img src="images/logo-L.png" alt="The Wunderlust logo shows blue waves and the outline of two palm trees against an orange sun"></a>
             <h1>Wunderlust Travel</h1>
             <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
             <nav>
