--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <header>
         <a class="skip-link" href="#main-content">Skip to main content</a>
 
-    <picture>
-        <source media="(min-width: 650px)" srcset="images/logo-L.png">
-        <source media="(min-width: 465px)" srcset="images/logo-M.png">
-        <img src="images/logo-L.png" alt="Wunderlust Travel Logo" style="width:auto;">
-    </picture>
-    <h1>Wunderlust Travel</h1>
-    <p>Let Wunderlust Travel help you plan the trip of your dreams!</p> 
-    <nav>
+        <picture>
+            <source media="(min-width: 650px)" srcset="images/logo-L.png">
+            <source media="(min-width: 465px)" srcset="images/logo-M.png">
+            <img src="images/logo-S.png" alt="Wunderlust Travel Logo" style="width:auto;">
+        </picture>
+        <h1>Wunderlust Travel</h1>
+        <p>Let Wunderlust Travel help you plan the trip of your dreams!</p> 
+        <nav>
             <ul>
                 <li><a href="#destinations">Destinations</a></li>
                 <li><a href="#inspirations">Inspirations</a></li>
@@ -24,7 +24,7 @@
                 <li><a href="#contact-us">Contact Us</a></li>
             </ul>
         </nav>
-</header> 
+    </header> 
     <main id="main-content">
         <h2>Majorca</h2>
         <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains,
@@ -50,7 +50,7 @@
         </picture>
         <section id="plan-your-trip">
             <h2>Plan Your Trip</h2>
-            <div style="display: inline-flex;">
+            <!--div style="display: inline-flex;"-->
                 <article style="margin-right: 100px;">
                     <h3>How to Get there</h3> 
                     <a href="#" title="Search for flights">
@@ -119,12 +119,12 @@
                         <polyline points="9 6 15 12 9 18" />
                     </svg>
                 </article>
-            </div> 
+            <!--/-div--> 
         </section>
 
         <section id="testimonials" >
             <h2>Testimonials</h2>
-            <div style="display: flex;">           
+            <!--div style="display: flex;"-->           
                 <article>               
                     <h3>Miranda Blake</h3>
                     <picture >
@@ -169,12 +169,12 @@
                 <h4>Traveling From: Madrid, Spain</h4> 
                 <p style="text-wrap:wrap; width: 200px; margin-right: 100px;">“Live, laugh, love-- everything you need in Majorca.” </p>
                 </article>
-            </div>
+            <!--/div-->
         </section>
 
         <section id="about">
             <h2>About Your Destination</h2> 
-            <div style="display: flex;">
+            <!--div style="display: flex;"-->
                 <article style="margin-right: 100px;">
                     <h3>Size</h3>
                     <svg xmlns="http://www.w3.org/2000/svg"
@@ -225,7 +225,7 @@
                     </svg> 
                     <p>Population: 923,608</p>
                 </article>
-            </div>
+            <!--/div-->
         </section>
         <section id="Contact-Us">
             <h2>Contact Us</h2>
