--- a/majorca.html
+++ b/majorca.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta name="author" content="Jessica Barnett">
-        <meta name="description" content="Wunderlust Travel can help you plan the trip of your dreams! Whether you're traveling for business or pleasure, Wunderlust Travel can help you plan the perfect trip!">
-        <title>Wunderlust Travel</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Storm">
+        <meta name="description" content="Explore Majorca, an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city.">
+        <title>Majorca |Wunderlust Travel</title>
+        <link rel="stylesheet" href="css/styles.css">
+        <meta property="og:title" content="Majorca | Wunderlust Travel">
+        <meta property="og:description" content="Explore Majorca, an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city.">
+        <meta property="og:image" content="images/majorca-waves.png">
+        <meta property="og:url" content="https://www.wunderlusttravel.com/majorca.html">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Majorca | Wunderlust Travel">
+        <meta name="twitter:description" content="Explore Majorca, an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city.">
+        <meta name="twitter:image" content="images/majorca-waves.png">
+        <meta name="twitter:site" content="@WunderlustTravel">
+        <meta name="twitter:creator" content="@WunderlustTravel">
+        <meta name="robots" content="noindex, nofollow">
+
     </head>
     <body>
+<!--         Reveiew the document and add the proper tags to all of the headings  throughout. Use the outline feature in the validator to ensure that these have been added correctly. See the image of the correct outline as a reference if you have questions 
+
+Also review the alt text on all of the images to ensure that it is descriptive and appropriate-->
         <header>
             <picture>
                 <source media="(min-width: 650px)" srcset="images/logo-L.png">
@@ -14,7 +31,7 @@
                 <img src="images/logo-S.png"
                     alt="The Wunderlust logo shows blue waves and the outline of two palm trees against an orange sun"
                     style="width:auto;">
-            </picture>
+                </picture>
             <h1>Wunderlust Travel</h1>
             <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
             <nav>
@@ -31,9 +48,24 @@
             <article>  
                 <h2>Majorca</h2>
                 <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
-                <img src="images/majorca-waves-L.png" alt="Turquoise blue waters with white wave caps crashing against a rock cliff">
-                <img src="images/majorca-beach-L.png" alt="A calm cove with turquoise waters calmly lapping at a light sand beach">
-                <img src="images/majorca-cove-L.png" alt="Deep blue water leading to the horizon with the island and trees in the foreground">
+                <picture>
+                    <source media="(min-width: 1024px)" srcset="images/majorca-waves-L.png">
+                    <source media="(min-width: 780px)" srcset="images/majorca-waves-M.png">
+                    <source media="(min-width: 320px)" srcset="images/majorca-waves-S.png">
+                    <img src="images/majorca-waves-M.png" alt="Turquoise blue waters with white wave caps crashing against a rock cliff">
+                </picture>
+                <picture>
+                    <source media="(min-width: 1024px)" srcset="images/majorca-beach-L.png">
+                    <source media="(min-width: 780px)" srcset="images/majorca-beach-M.png">
+                    <source media="(min-width: 320px)" srcset="images/majorca-beach-S.png">
+                    <img src="images/majorca-beach-M.png" alt="Sandy beach with turquoise blue water and a rocky cliff in the background">
+                </picture>
+                <picture>
+                    <source media="(min-width: 1024px)" srcset="images/majorca-cove-L.png">
+                    <source media="(min-width: 780px)" srcset="images/majorca-cove-M.png">
+                    <source media="(min-width: 320px)" srcset="images/majorca-cove-S.png">
+                    <img src="images/majorca-cove-M.png" alt="Deep blue water leading to the horizon with the island and trees in the foreground">
+                </picture>
                 <section>
                     <h3>Plan Your Trip</h3>
                     <section>
@@ -68,25 +100,45 @@
                 <section>
                     <h3>Testimonials</h3>
                     <section>
-                        <img src="images/mirando-blake-L.png" alt="Miranda Blake has a blonde bob and is wearing dark sunglasses">
-                        <h4>Amanda Blake</h4>
+                        <picture>
+                            <source srcset="images/miranda-blake-L.png" media="(min-width: 1024px)">
+                            <source srcset="images/miranda-blake-M.png" media="(min-width: 780px)">
+                            <source srcset="images/miranda-blake-S.png" media="(min-width: 320px)">
+                            <img src="images/miranda-blake-S.png" alt="Miranda Blake has a blonde bob and is wearing dark sunglasses">
+                        </picture>
+                        <h4>Miranda Blake</h4>
                         <p>Traveling From: London, England</p>
                         <q>I traveled here for business, but my stay was extended. Now it is my home.</q>
                     </section>
                     <section>
-                        <img src="images/max-winter-L.png" alt="Max Winter has dark blonde hair and a trimmed beard and mustache">
+                        <picture>
+                            <source srcset="images/max-winter-L.png" media="(min-width: 1024px)">
+                            <source srcset="images/max-winter-M.png" media="(min-width: 780px)">
+                            <source srcset="images/max-winter-S.png" media="(min-width: 320px)">
+                            <img src="images/max-winter-S.png" alt="Max Winter has short, brown hair with a beard and mustache and is wearing a brown button-up shirt">
+                        </picture>
                         <h4>Max Winter</h4>
                         <p>Traveling From: Berlin, Germany</p>
                         <q>Great escape from my reality. Beautiful sunsets, wonderful people, great beer.</q>
                     </section>
                     <section>
-                        <img src="images/ines-villegoes-L.png" alt="Ines Villegos has shoulder-length, wavy, brown hair and is wearing a brown sweater">
+                        <picture>
+                            <source srcset="images/ines-villegoes-L.png" media="(min-width: 1024px)">
+                            <source srcset="images/ines-villegoes-M.png" media="(min-width: 780px)">
+                            <source srcset="images/ines-villegoes-S.png" media="(min-width: 320px)">
+                            <img src="images/ines-villegoes-S.png" alt="Inés Villegoes has long, dark brown hair and is wearing a police bullet-proof vest">
+                        </picture>
                         <h4>Inés Villegos</h4>
                         <p>Traveling From: Barcelona, Spain</p>
                         <q>A very safe environment for all travelers.</q>
                     </section>
                     <section>
-                        <img src="images/carmen-lorenzo-L.png" alt="Carmen Lorenzo has long, dark brown hair and is wearing gold hoop earrings">
+                        <picture>
+                            <source srcset="images/carmen-lorenzo-L.png" media="(min-width: 1024px)">
+                            <source srcset="images/carmen-lorenzo-M.png" media="(min-width: 780px)">
+                            <source srcset="images/carmen-lorenzo-S.png" media="(min-width: 320px)">
+                            <img src="images/carmen-lorenzo-S.png" alt="Carmen Lorenzo has long, dark brown hair and is wearing gold hoop earrings">
+                        </picture>
                         <h4>Carmen Lorenzo</h4>
                         <p>Traveling From: Madrid, Spain</p>
                         <q>Live, laugh, love-- everything you need in Majorca.</q>
@@ -117,29 +169,25 @@
                 </section>
                 <section>
                     <h3>Contact Us</h3>
-                    <p>Required fields are marked with an <span class="required">*</span></p>
                     <form method="post" action="https://wp.zybooks.com/form-viewer.php">
-                        <label for="fName">First Name<span class="required">*</span></label>
+                        <label for="fName">First Name<span>*</span></label>
                         <input type="text" name="fName" id="fName" autocomplete="given-name" required>
-                        <label for="lName">Last Name<span class="required">*</span></label>
+                        <label for="lName">Last Name<span>*</span></label>
                         <input type="text" name="lName" id="lName" autocomplete="family-name" required>
-
                         <fieldset>
-                            <legend>Contact Method<span class="required">*</span></legend>
-                            <input type="radio" name="contactPref" id="prefEmail" required checked>
+                            <legend>Contact Method<span>*</span></legend>
+                            <input type="radio" name="contactPref" id="prefEmail" required>
                             <label for="prefEmail">Email</label>
                             <input type="radio" name="contactPref" id="prefText">
                             <label for="prefText">Text</label>
                             <input type="radio" name="contactPref" id="prefPhone">
                             <label for="prefPhone">Phone</label>
                         </fieldset>
-
-                        <label for="email">Email Address <span class="required">*</span></label>
-                        <input type="email" name="email" id="email" autocomplete="email" required>
-                        <label for="phone">Phone Number <span class="required">*</span></label>
+                        <label for="email">Email Address</label>
+                        <input type="email" name="email" id="email" autocomplete="email">
+                        <label for="phone">Phone Number</label>
                         <input type="tel" name="phone" id="phone" autocomplete="tel">
-
-                        <label for="destination">Destination<span class="required">*</span></label>
+                        <label for="destination">Destination<span>*</span></label>
                         <select name="destination" id="destination" required>
                             <option value="">Choose an Option</option>
                             <option value="barcelona">Barcelona</option>
@@ -151,8 +199,7 @@
                             <option value="tenerife">Tenerife</option>
                             <option value="valencia">Valencia</option>
                         </select>
-
-                        <label for="travelTime">Travel Time<span class="required">*</span></label>
+                        <label for="travelTime">Travel Time<span>*</span></label>
                         <select name="travelTime" id="travelTime" required>
                             <option value="">Choose an Option</option>
                             <option value="fall">Fall</option>
@@ -161,7 +208,6 @@
                             <option value="summer">Summer</option>
                             <option value="flexible">Flexible</option>
                         </select>
-                        
                         <input type="submit" name="mySubmit" id="mySubmit" value="Submit Form">
                     </form>
                 </section>
